--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <!-- Saisir votre age -->
             <label for="age">Quel âge avez vous ?  </label><input type="text" id="age" name="age" /><br />
             <p>Valider pour voir votre status</p>
-            <button onclick="getAge()">Valider</button>
+            <button id="submit" name="submit">Valider</button>
         </form>
     </div> <!-- fin de div pour le container -->
     <!-- SCRIIIIIIIIIIIIIIIIIIIIPT -->
-    <script src="script.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
